<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".control.juegodaniel.JuegoDanielActivity8">

    <ScrollView
        android:layout_width="408dp"
        android:layout_height="596dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Evaluacion"
                android:textSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:text="@string/escoje"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="189dp"
                android:layout_height="194dp"
                android:layout_marginTop="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:srcCompat="@drawable/uno" />

            <TextView
                android:id="@+id/unoTXT"
                android:layout_width="84dp"
                android:layout_height="50dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/uno"
                android:textSize="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView14" />

            <TextView
                android:id="@+id/tresTXT"
                android:layout_width="84dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tres"
                android:textSize="40dp"
                app:layout_constraintEnd_toStartOf="@+id/cincoTXT"
                app:layout_constraintStart_toEndOf="@+id/unoTXT"
                app:layout_constraintTop_toBottomOf="@+id/imageView14" />

            <TextView
                android:id="@+id/cincoTXT"
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="44dp"
                android:text="@string/cinco"
                android:textSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView14" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>